Make password smaller and easier to select

--- a/chrome/content/generate.html
+++ b/chrome/content/generate.html
@@ -38,16 +38,16 @@
     //]]>
     </script>
 
-    <h2>Copy and paste this new password</h2>
+    <h2>Copy and paste this new password:</h2>
 
-    <div style="font-family:monospace; font-size:xx-large; position:relative; padding-bottom:1ex">
-      <div id="password" style="color:transparent; position:absolute"></div>
-      <div id="dots"></div>
+    <div style="font-family:monospace; font-size:x-large; position:relative">
+      <div id="password" style="color:transparent; position:absolute; padding:0 2em 0.5em 2em"></div>
+      <div id="dots" style="padding:0 2em 0.5em 2em"></div>
     </div>
 
     <p>After setting your password for a website, sign out and sign back in to make sure that Firefox saved the password. If it is not saved anywhere else then once you leave or refresh this page, this password will be gone for good.</p>
 
-    <h2>Generate another password</h2>
+    <h2>Generate another password:</h2>
 
     <form class="form-horizontal" action="" method="get">
       <div class="form-group">
@@ -98,7 +98,7 @@
       <input class="btn btn-primary btn-lg" type="submit" value="Generate"/>
     </p>
 
-    <h2>Viewing saved passwords</h2>
+    <h2>Viewing saved passwords:</h2>
       <p>If you use the same username and password on two websites (for example, <a href="http://www.amazon.com/">amazon.com</a> and <a href="http://www.amazon.ca/">amazon.ca</a>), and you have saved your password in one website but not the other, you can get the password by right-clicking the website in Firefox's <a href="chrome://passwordmgr/content/passwordManager.xul">saved passwords</a> list and clicking "Copy password".</p>
     </h2>
 
