Length is not a checkbox

--- a/chrome/content/generate.html
+++ b/chrome/content/generate.html
@@ -84,11 +84,9 @@
       </div>
 
       <div class="form-group">
-        <div class="checkbox">
-          <label>
-            Length:
-            <input style="margin-top: 4px;" class="form-control" id="length" name="length" type="number" value="10"/>
-          </label>
+        <div>
+          Length:
+          <input style="margin-top: 4px;" class="form-control" id="length" name="length" type="number" value="10"/>
         </div>
       </div>
     </form>
