Tweak warning to be a bit more readable

--- a/chrome/content/generate.html
+++ b/chrome/content/generate.html
@@ -49,7 +49,7 @@
       <a class="btn btn-lg btn-primary" href="javascript:clipboard.copyString(document.getElementById('password').textContent)">Copy to clipboard</a>
     </h2>
 
-    <p>After setting your password for a website, sign out and sign back in to make sure that Firefox saved the password. If it is not saved anywhere else then once you leave or refresh this page, this password will be gone for good.</p>
+    <p>After setting your password for a website, sign out and sign back in to make sure that Firefox saved the password. If it is not saved anywhere else, then <b>this password will be gone for good</b> when you close this page, refresh this page, or generate a new password on this page.</p>
 
     <h2>Generate another password:</h2>
 
