Prohibit lengths less than 1

--- a/chrome/content/generate.html
+++ b/chrome/content/generate.html
@@ -91,7 +91,7 @@
       <div class="form-group">
         <div>
           Length:
-          <input style="margin-top: 4px;" class="form-control" id="length" name="length" type="number" value="10"/>
+          <input style="margin-top: 4px;" class="form-control" id="length" name="length" type="number" min="1" value="10"/>
         </div>
       </div>
 
