Make password slightly less gigantic

--- a/chrome/content/generate.html
+++ b/chrome/content/generate.html
@@ -53,8 +53,8 @@
     <h2>
       New random password:
       <div style="display:inline-block; font-family:monospace; position:relative">
-        <div id="password" style="color:transparent; position:absolute; padding:0.5em 1em 0.5em 1em"></div>
-        <div id="dots" style="padding:0.5em 1em 0.5em 1em"></div>
+        <div id="password" style="color:transparent; font-size:xx-large; position:absolute; padding:0.5em 1em 0.5em 1em"></div>
+        <div id="dots" style="font-size:xx-large; padding:0.5em 1em 0.5em 1em"></div>
       </div>
       <a class="btn btn-lg btn-primary" href="javascript:clipboard.copyString(document.getElementById('password').textContent)">Copy to clipboard</a>
     </h2>
