Add parentheses around boolean comparison and assignment

--- a/chrome/content/generate.html
+++ b/chrome/content/generate.html
@@ -109,7 +109,7 @@
     </form>
 
     <script type="application/javascript">//<![CDATA[
-      var useDefaults = location.href.indexOf("?") == -1;
+      var useDefaults = (location.href.indexOf("?") == -1);
 
       var params = {};
       function applyCheckboxParam(name) {
