Use <strong> tag instead of styled <span>

--- a/data/generate.html
+++ b/data/generate.html
@@ -75,7 +75,7 @@
             <div id="dots" style="font-size:xx-large; padding:0.5em 1em 0.5em 1em"></div>
           </div>
 
-          <p>After setting your password for a website, sign out and sign back in to make sure that Firefox saved the password. If it is not saved anywhere else, then <span style="font-weight:bold">this password will be gone for good</span> when you close this page, refresh this page, or generate a new password on this page.</p>
+          <p>After setting your password for a website, sign out and sign back in to make sure that Firefox saved the password. If it is not saved anywhere else, then <strong>this password will be gone for good</strong> when you close this page, refresh this page, or generate a new password on this page.</p>
 
           <button class="btn btn-lg btn-primary small-screen" id="clipboardCopy1">Copy to clipboard again</button>
         </td>
