--- a/data/generate.html
+++ b/data/generate.html
@@ -58,85 +58,75 @@
       }
     </style>
 
-    <title>Generate password</title>
+    <title></title>
   </head>
-  <body class="container">
+  <body class="container" style="display:none">
     <div id="warnings"></div>
 
-    <div class="btn" style="font-size:x-large; float:right"><a id="viewsaved">View saved passwords</a></div>
+    <div class="btn" style="font-size:x-large; float:right"><a id="viewSaved"></a></div>
 
     <table style="clear:both; margin-left:auto; margin-right:auto">
       <tr>
         <td id="passwordCell">
-          <h2>The following new password has been copied to the clipboard:</h2>
+          <h2 id="passwordHeader"></h2>
 
           <div style="font-family:monospace; position:relative; width:inherit; word-wrap:break-word">
             <div id="password" style="color:transparent; font-size:xx-large; padding:0.5em 1em 0.5em 1em; position:absolute; width:inherit"></div>
             <div id="dots" style="font-size:xx-large; padding:0.5em 1em 0.5em 1em; width:inherit"></div>
           </div>
 
-          <p>After setting your password for a website, sign out and sign back in to make sure that Firefox saved the password. If it is not saved anywhere else, then <strong>this password will be gone for good</strong> when you close this page, refresh this page, or generate a new password on this page.</p>
+          <p id="passwordWarning"></p>
 
-          <button class="btn btn-lg btn-primary small-screen" id="clipboardCopy1">Copy to clipboard again</button>
+          <button class="btn btn-lg btn-primary small-screen" id="clipboardCopy1"></button>
         </td>
         <td>
           <form class="form-horizontal" id="form">
-            <h2>Options</h2>
+            <h2 id="optionsHeader"></h2>
 
             <div class="form-group" style="margin-left:0">
               <div class="checkbox">
-                <label>
-                  <input checked="checked" id="miniscule" name="miniscule" type="checkbox"/>
-                  Lowercase letters
-                </label>
+                <input checked="checked" id="miniscule" name="miniscule" type="checkbox"/>
+                <label for="miniscule" id="minisculeLabel"></label>
               </div>
             </div>
 
             <div class="form-group" style="margin-left:0">
               <div class="checkbox">
-                <label>
-                  <input checked="checked" id="majiscule" name="majiscule" type="checkbox"/>
-                  Uppercase letters
-                </label>
+                <input checked="checked" id="majiscule" name="majiscule" type="checkbox"/>
+                <label for="majiscule" id="majisculeLabel"></label>
               </div>
             </div>
 
             <div class="form-group" style="margin-left:0">
               <div class="checkbox">
-                <label>
-                  <input checked="checked" id="numbers" name="numbers" type="checkbox"/>
-                  Numbers
-                </label>
+                <input checked="checked" id="numbers" name="numbers" type="checkbox"/>
+                <label for="numbers" id="numbersLabel"></label>
               </div>
             </div>
 
             <div class="form-group" style="margin-left:0">
               <div class="checkbox">
-                <label>
-                  <input id="symbols" name="symbols" type="checkbox" style="float:none"/>
-                  Symbols:
-                </label>
+                <input id="symbols" name="symbols" style="float:none" type="checkbox"/>
+                <label for="symbols" id="symbolsLabel"></label>
                 <input id="oksymbols" class="form-control" name="oksymbols" oninput="document.getElementById('symbols').checked = true" style="display:inline; width:20ex" type="text" value="-_."/>
               </div>
             </div>
 
             <div class="form-group" style="margin-left:0">
-              <div>
-                Length:
-                <input style="display:inline; width:10ex" class="form-control" id="length" name="length" type="number" max="1000" min="1" value="10"/>
-              </div>
+              <span id="lengthLabel"></span>
+              <input style="display:inline; width:10ex" class="form-control" id="length" name="length" type="number" max="1000" min="1" value="10"/>
             </div>
 
-            <input class="btn btn-primary btn-lg small-screen" id="generate1" type="submit" value="Generate another password"/>
+            <input class="btn btn-primary btn-lg small-screen" id="generate1" type="submit"></input>
           </form>
         </td>
       </tr>
       <tr class="big-screen">
         <td style="border-right:1px solid black">
-          <button class="btn btn-lg btn-primary" id="clipboardCopy2">Copy to clipboard again</button>
+          <button class="btn btn-lg btn-primary" id="clipboardCopy2"></button>
         </td>
         <td>
-          <button class="btn btn-primary btn-lg" id="generate2" onclick="document.getElementById('form').submit()">Generate another password</button>
+          <button class="btn btn-primary btn-lg" id="generate2" onclick="document.getElementById('form').submit()"></button>
         </td>
       </tr>
     </table>
