--- a/data/generate.html
+++ b/data/generate.html
@@ -106,6 +106,13 @@
 
             <div class="form-group" style="margin-left:0">
               <div class="checkbox">
+                <input checked="checked" id="lookalikes" name="lookalikes" type="checkbox"/>
+                <label for="lookalikes" id="lookalikesLabel"></label>
+              </div>
+            </div>
+
+            <div class="form-group" style="margin-left:0">
+              <div class="checkbox">
                 <input id="symbols" name="symbols" style="float:none" type="checkbox"/>
                 <label for="symbols" id="symbolsLabel"></label>
                 <input id="oksymbols" class="form-control" name="oksymbols" oninput="document.getElementById('symbols').checked = true" style="display:inline; width:20ex" type="text" value="-_."/>
