Include more common symbols and exclude lookalikes

--- a/data/generate.html
+++ b/data/generate.html
@@ -115,7 +115,7 @@
               <div class="checkbox">
                 <input id="symbols" name="symbols" style="float:none" type="checkbox"/>
                 <label for="symbols" id="symbolsLabel"></label>
-                <input id="oksymbols" class="form-control" name="oksymbols" oninput="document.getElementById('symbols').checked = true" style="display:inline; width:20ex" type="text" value="-_."/>
+                <input id="oksymbols" class="form-control" name="oksymbols" oninput="document.getElementById('symbols').checked = true" style="display:inline; width:20ex" type="text" value="@#$%&-+*!?/."/>
               </div>
             </div>
 
