--- a/data/generate.html
+++ b/data/generate.html
@@ -85,15 +85,15 @@
 
             <div class="form-group" style="margin-left:0">
               <div class="checkbox">
-                <input checked="checked" id="miniscule" name="miniscule" type="checkbox"/>
-                <label for="miniscule" id="minisculeLabel"></label>
+                <input checked="checked" id="miniscules" name="miniscules" type="checkbox"/>
+                <label for="miniscules" id="minisculesLabel"></label>
               </div>
             </div>
 
             <div class="form-group" style="margin-left:0">
               <div class="checkbox">
-                <input checked="checked" id="majiscule" name="majiscule" type="checkbox"/>
-                <label for="majiscule" id="majisculeLabel"></label>
+                <input checked="checked" id="majiscules" name="majiscules" type="checkbox"/>
+                <label for="majiscules" id="majisculesLabel"></label>
               </div>
             </div>
 
