--- a/data/generate.html
+++ b/data/generate.html
@@ -129,7 +129,7 @@
               <input style="display:inline; width:10ex" class="form-control" id="length" name="length" type="number" max="1000" min="1" value="10"/>
             </div>
 
-            <button class="btn btn-primary btn-lg small-screen" id="generate1"></input>
+            <button class="btn btn-primary btn-lg small-screen" id="generate1"></button>
           </form>
         </td>
       </tr>
