--- a/data/generate.html
+++ b/data/generate.html
@@ -120,7 +120,7 @@
               <div class="checkbox">
                 <input id="symbols" name="symbols" style="float:none" type="checkbox"/>
                 <label for="symbols" id="symbolsLabel"></label>
-                <input id="oksymbols" class="form-control" name="oksymbols" oninput="document.getElementById('symbols').checked = true" style="display:inline; width:20ex" type="text" value="@#$%&-+*!?/."/>
+                <input id="oksymbols" class="form-control" name="oksymbols" oninput="document.getElementById('symbols').checked = true" style="display:inline; width:20ex" type="text" value="@#$%&amp;-+*!?/."/>
               </div>
             </div>
 
