Upgrade to Bootstrap 3.3.7

--- a/data/generate.html
+++ b/data/generate.html
@@ -42,43 +42,43 @@
               </div>
             </div>
 
-            <div class="form-group" style="margin-left:0">
-              <div class="checkbox">
+            <div class="form-group">
+              <label class="checkbox-inline">
                 <input checked="checked" id="miniscules" name="miniscules" type="checkbox"/>
-                <label for="miniscules" id="minisculesLabel"></label>
-              </div>
+                <span id="minisculesLabel"></span>
+              </label>
             </div>
 
-            <div class="form-group" style="margin-left:0">
-              <div class="checkbox">
+            <div class="form-group">
+              <label class="checkbox-inline">
                 <input checked="checked" id="majiscules" name="majiscules" type="checkbox"/>
-                <label for="majiscules" id="majisculesLabel"></label>
-              </div>
+                <span id="majisculesLabel"></span>
+              </label>
             </div>
 
-            <div class="form-group" style="margin-left:0">
-              <div class="checkbox">
+            <div class="form-group">
+              <label class="checkbox-inline">
                 <input checked="checked" id="numbers" name="numbers" type="checkbox"/>
-                <label for="numbers" id="numbersLabel"></label>
-              </div>
+                <span id="numbersLabel"></span>
+              </label>
             </div>
 
-            <div class="form-group" style="margin-left:0">
-              <div class="checkbox">
+            <div class="form-group">
+              <label class="checkbox-inline">
                 <input checked="checked" id="lookalikes" name="lookalikes" type="checkbox"/>
-                <label for="lookalikes" id="lookalikesLabel"></label>
-              </div>
+                <span id="lookalikesLabel"></span>
+              </label>
             </div>
 
-            <div class="form-group" style="margin-left:0">
-              <div class="checkbox">
+            <div class="form-group">
+              <label class="checkbox-inline">
                 <input id="symbols" name="symbols" style="float:none" type="checkbox"/>
-                <label for="symbols" id="symbolsLabel"></label>
+                <span id="symbolsLabel"></span>
                 <input id="oksymbols" class="form-control" name="oksymbols" oninput="document.getElementById('symbols').checked = true" style="display:inline; width:20ex" type="text" value="@#$%&amp;-+*!?/."/>
-              </div>
+              </label>
             </div>
 
-            <div class="form-group" style="margin-left:0">
+            <div class="form-group">
               <span id="lengthLabel"></span>
               <input style="display:inline; width:10ex" class="form-control" id="length" name="length" type="number" max="1000" min="1" value="10"/>
             </div>
