Use a double colon when referring to the "before" pseudo-element

--- a/data/generate.html
+++ b/data/generate.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" href="about:pasa/icon-16.png"/>
 
     <style id="styleblock">
-      #dots:before {
+      #dots::before {
         content: "\A0"; /* nbsp placeholder */
       }
     </style>
